Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-25927

tilt sensor doc warning

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.0.0, 5.9.7
    • 5.0.0
    • Sensors
    • None
    • 5601d9e0e0c5fa5c9026a2904427a7ee87d188c4 (qt/qtsensors/5.12.0)

    Description

      Looks like a property has been renamed, or otherwise can't be found during the doc run.

      /home/lramsay/git/qt5/qtsensors/src/imports/sensors2/qsensor2tilt.cpp:316: Can't create link to 'TiltSensor.unit'
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            lramsay Lincoln Ramsay (closed Nokia identity) (Inactive)
            lramsay Lincoln Ramsay (closed Nokia identity) (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes