Remove duplicate (incorrect) \sa link.

The correct link is already present so remove the broken one.

Change-Id: Ieb41733f40ff9f79a6a14ad0820d9c8b026f967e
Fixes: QTBUG-25927
Reviewed-by: Wolfgang Beck <wolfgang.beck@nokia.com>